--- a/style.css
+++ b/style.css
@@ -22,10 +22,17 @@ section {
   text-decoration: none;
   background-image: linear-gradient(orange, tomato);
   padding: 10px 40px;
+  font-weight: 700;
   color: white;
   border-radius: 5px;
 }
 .top-banner {
   background-image: url(images/top-banner.png);
   background-repeat: no-repeat;
+}
+.drime-big {
+  background-image: url(images/dream-bg.png);
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-position: right bottom;
 }
