--- a/style.css
+++ b/style.css
@@ -5,15 +5,19 @@ body {
 h1 {
   font-size: 50px;
 }
+h2 {
+  font-size: 40px;
+}
 .orange-color {
   color: orange;
 }
-section {
+.flexibal-container {
   display: flex;
+  margin-bottom: 150px;
 }
 .half-width {
   width: 50%;
-  padding-left: 2%;
+  padding-left: 20px;
 }
 .half-width img {
   width: 80%;
@@ -33,6 +37,33 @@ section {
 .drime-big {
   background-image: url(images/dream-bg.png);
   background-repeat: no-repeat;
-  background-attachment: fixed;
-  background-position: right bottom;
+  background-position: right center;
+}
+
+.experience-area {
+  background-image: url(images/exp-bg.png);
+  background-repeat: no-repeat;
+  background-position: left;
+}
+.experience-item {
+  width: 40%;
+  border-radius: 10px;
+  margin-left: 5%;
+  margin-right: 5%;
+  padding-left: 20px;
+  box-shadow: 10px 10px 40px gray;
+}
+#full-stack-experience {
+  border-left: 7px solid;
+  border-image: linear-gradient(salmon, tomato);
+  border-image-slice: 1;
+}
+#web-dev-experience {
+  border-left: 7px solid;
+  border-image: linear-gradient(blue, cyan);
+  border-image-slice: 1;
+}
+
+footer p {
+  text-align: center;
 }
